<resources>
    <string name="app_name">MobOSWorkshop</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_update">Update</string>
    <string name="title_settings">Settings</string>
    <string name="title">Title</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="user_sign_in_anonymously">User is signed in anonymously</string>
    <string name="signed_in_with_google">Signed in with Google, user name: %1$s</string>
</resources>
