<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ro.david.mobosworkshop.ui.home.HomeFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_update"
        android:name="ro.david.mobosworkshop.ui.dashboard.DashboardFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ro.david.mobosworkshop.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>